[project]
name = "streamlit-mypages"
version = "0.1.0"
description = "Add a short description here"
authors = [
    { name = "lxizaxi", email = "USERNAME@users.noreply.github.com" }
]
dependencies = [
    "streamlit~=1.32.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["Welcome"]
